src/test/resources/semantic/custom/reject/tooFewFunctionCallParams1.ul
void main() {
    foo(5);
}

void foo(int one, float two) {
}
